hphp/hack/test/typecheck/shape_remove_key1.php.exp
File "shape_remove_key1.php", line 10, characters 6-8:
The field x is undefined (Typing[4108])
File "shape_remove_key1.php", line 8, characters 3-34:
Definition is here
